# karp-lex-core

./: .bumpversion.cfg  .bumpversion.toml  .gitignore  .pylintrc  CHANGELOG.md  Makefile  README.md  mypy.ini  pyproject.toml  ruff.toml
.github/workflows/: build.yml  check.yml  ci.yml  coverage.yml  latest-changes.yml  publish-docs.yml  release.yml  scheduled.yml  test.yml
karp/lex_core/: __init__.py
karp/lex_core/dtos/: entry_dto.py
karp/lex_core/tests/: dict_entry_dto_unit_test.py
karp/lex_core/value_objects/: __init__.py  unique_id.py
src/karp/lex_core/: __init__.py
src/karp/lex_core/commands/: __init__.py  base.py  entry_commands.py  entry_repo_commands.py  resource_commands.py
src/karp/lex_core/dtos/: entry_dto.py
src/karp/lex_core/value_objects/: __init__.py  unique_id.py
src/karp_lex_types/: __init__.py
src/karp_lex_types/commands/: __init__.py  base.py  entry_commands.py  entry_repo_commands.py  resource_commands.py
src/karp_lex_types/dtos/: __init__.py  entry_dto.py
src/karp_lex_types/value_objects/: __init__.py  unique_id.py
tests/: entry_dto_unit_test.py  requirements-testing.txt  test_entry_commands.py  test_entry_repo_commands.py  test_resource_commands.py  test_unique_id.py
