[project]
authors = [
    { name = "Språkbanken at the University of Gothenburg", email = "sb-info@svenska.gu.se" },
    { name = "Kristoffer Andersson", email = "kristoffer.andersson@gu.se" },
]
license = { text = "MIT" }
requires-python = ">=3.10,<4.0"
dependencies = ["karp-lex-types>=0.6.2"]
name = "karp-lex-core"
version = "0.6.2"
description = "The core of karp-lex"
readme = "README.md"

[project.urls]
"Bug Tracker" = "https://github.com/spraakbanken/karp-lex-core/issues"
homepage = "https://spraakbanken.gu.se"
repository = "https://github.com/spraakbanken/karp-lex-core"
documentation = "https://github.com/spraakbanken/karp-lex-core"


[tool.pdm.dev-dependencies]
dev = [
    "pytest<8.0.0,>=7.2.1",
    "pytest-cov<5.0.0,>=4.0.0",
    "bump2version<2.0.0,>=1.0.1",
    "mypy<2.0.0,>=1.8.0",
    "ruff<1.0.0,>=0.1.14",
]

[tool.pdm.build]
includes = ["src/karp/lex_core"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.sdist]
exclude = ["/.github", "/docs"]

[tool.hatch.build.targets.wheel]
packages = ["src/karp/"]
